--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,13 +8,10 @@ import Layout from "../layouts/Layout.astro";
     class="mx-auto flex h-[calc(100svh-40px)] max-w-xs flex-col justify-center gap-4 p-4"
   >
     <p>
-      Microblog is an extremely minimal and opinionated blogging template built with Astro and Tailwind.
+      Microblog is an extremely minimal and opinionated blogging template built
+      with Astro and Tailwind.
     </p>
-    <p>
-      Heavily inspired by jrmyphlmn.com.
-    </p>
-    <p>
-      To use this template, check out the GitHub repository. 
-    </p>
+    <p>Heavily inspired by jrmyphlmn.com.</p>
+    <p>To use this template, check out the GitHub repository.</p>
   </main>
 </Layout>
