feat: switched to geist font

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,8 +4,13 @@
 
 @layer base {
   @font-face {
-    font-family: "Uncut Sans";
-    src: url("/fonts/uncut-sans-variable.woff2") format("woff2");
+    font-family: "Geist";
+    src: url("/fonts/geist-variable.woff2") format("woff2");
+    font-display: swap;
+  }
+  @font-face {
+    font-family: "Geist Mono";
+    src: url("/fonts/geist-mono-variable.woff2") format("woff2");
     font-display: swap;
   }
 }
