fix: font preloads

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -24,7 +24,14 @@ const { title, description, image = "/blog-placeholder-1.jpg" } = Astro.props;
     <!-- Font preloads -->
     <link
       rel="preload"
-      href="/fonts/uncut-sans-variable.woff2"
+      href="/fonts/geist-variable.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="/fonts/geist-mono-variable.woff2"
       as="font"
       type="font/woff2"
       crossorigin
