--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,10 +8,30 @@ import Layout from "../layouts/Layout.astro";
     class="mx-auto flex h-[calc(100svh-40px)] max-w-xs flex-col justify-center gap-4 p-4"
   >
     <p>
-      Microblog is an extremely minimal and opinionated blogging template built
-      with Astro and Tailwind.
+      miniblog is an extremely minimal and opinionated blogging template built
+      with <a
+        href="https://astro.build/"
+        target="_blank"
+        class="text-blue-500 underline">Astro</a
+      > and <a
+        href="https://tailwindcss.com/"
+        target="_blank"
+        class="text-blue-500 underline">Tailwind</a
+      >.
     </p>
-    <p>Heavily inspired by jrmyphlmn.com.</p>
-    <p>To use this template, check out the GitHub repository.</p>
+    <p>
+      Heavily inspired by <a
+        href="https://jrmyphlmn.com/"
+        target="_blank"
+        class="text-blue-500 underline">jrmyphlmn.com</a
+      >.
+    </p>
+    <p>
+      To use this template, check out the <a
+        href="https://github.com/nicholasdly/miniblog?tab=readme-ov-file"
+        target="_blank"
+        class="text-blue-500 underline">GitHub repository</a
+      >.
+    </p>
   </main>
 </Layout>
