--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -17,9 +17,9 @@ const { Content } = await post.render();
 ---
 
 <Layout title={post.data.title} description={post.data.description}>
-  <main class="mx-auto my-12 flex max-w-lg flex-col justify-center gap-5 p-4">
-    <h1 class="text-xl font-medium">{post.data.title}</h1>
-    <p class="font-medium text-neutral-500">
+  <main class="mx-auto my-12 flex max-w-lg flex-col justify-center p-4">
+    <h1 class="mb-5 text-xl font-medium">{post.data.title}</h1>
+    <p class="mb-1 font-medium text-neutral-500">
       {formatDate(post.data.date)}
     </p>
     <article>
