--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Layout from "../layouts/Layout.astro";
     class="mx-auto flex h-[calc(100svh-40px)] max-w-xs flex-col justify-center gap-4 p-4"
   >
     <p>
-      miniblog is an extremely minimal and opinionated blogging template built
+      miniblog is an opinionated and extremely minimal blogging template built
       with <a
         href="https://astro.build/"
         target="_blank"
