feat: optional og image for posts

--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -16,7 +16,11 @@ const post = Astro.props;
 const { Content } = await post.render();
 ---
 
-<Layout title={post.data.title} description={post.data.description}>
+<Layout
+  title={post.data.title}
+  description={post.data.description}
+  image={post.data.image}
+>
   <main class="mx-auto my-12 flex max-w-lg flex-col justify-center p-4">
     <h1 class="mb-5 text-xl font-medium">{post.data.title}</h1>
     <p class="mb-1 font-medium text-neutral-500">
