--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,7 @@ interface Props {
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
-const { title, description, image = "/blog-placeholder.jpg" } = Astro.props;
+const { title, description, image = "/blog-placeholder.svg" } = Astro.props;
 ---
 
 <html lang="en">
