--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import Layout from "../layouts/Layout.astro";
       >.
     </p>
     <p>
-      Heavily inspired by <a
+      Design heavily inspired by <a
         href="https://jrmyphlmn.com/"
         target="_blank"
         class="text-blue-500 underline">jrmyphlmn.com</a
