--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import { ViewTransitions } from "astro:transitions";
 import Header from "../components/Header.astro";
 import "../styles/global.css";
 
@@ -58,6 +59,8 @@ const { title, description, image = "/blog-placeholder.svg" } = Astro.props;
     <meta property="twitter:title" content={title} />
     <meta property="twitter:description" content={description} />
     <meta property="twitter:image" content={new URL(image, Astro.url)} />
+
+    <ViewTransitions />
   </head>
   <body class="font-sans text-neutral-900 antialiased">
     <Header />
