--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,17 +1,25 @@
 ---
-import { EMAIL, SITE_TITLE } from "../consts";
+import { EMAIL } from "../consts";
 ---
 
-<header class="h-10 px-4 py-2">
-  <nav class="flex items-center justify-between">
-    <div>
-      <a href="/" class="font-medium text-neutral-500 hover:underline">
-        {SITE_TITLE}
-      </a>
-    </div>
-    <div class="flex items-center gap-4">
-      <a href="/posts" class="font-medium hover:underline">posts</a>
-      <a href={`mailto:${EMAIL}`} class="font-medium hover:underline">email</a>
-    </div>
+<header class="mb-6" transition:name="header">
+  <nav class="flex items-center gap-4">
+    <a
+      href="/"
+      class="font-medium text-neutral-500 hover:text-neutral-900 hover:underline"
+    >
+      home
+    </a>
+    <a
+      href="/posts"
+      class="font-medium text-neutral-500 hover:text-neutral-900 hover:underline"
+    >
+      posts
+    </a>
+    <a
+      href={`mailto:${EMAIL}`}
+      class="font-medium text-neutral-500 hover:text-neutral-900 hover:underline"
+      >email</a
+    >
   </nav>
 </header>
