--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,17 +1,24 @@
 ---
 import { ViewTransitions } from "astro:transitions";
 import Header from "../components/Header.astro";
+import { cn } from "../lib/utils";
 import "../styles/global.css";
 
 interface Props {
   title: string;
   description: string;
   image?: string;
+  className?: string;
 }
 
 const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 
-const { title, description, image = "/blog-placeholder.svg" } = Astro.props;
+const {
+  title,
+  description,
+  image = "/blog-placeholder.svg",
+  className,
+} = Astro.props;
 ---
 
 <html lang="en">
@@ -63,7 +70,9 @@ const { title, description, image = "/blog-placeholder.svg" } = Astro.props;
     <ViewTransitions />
   </head>
   <body class="font-sans text-neutral-900 antialiased">
-    <Header />
-    <slot />
+    <div class={cn("max-w-xl mx-auto p-4", className)}>
+      <Header />
+      <slot />
+    </div>
   </body>
 </html>
