--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -21,7 +21,7 @@ const { Content } = await post.render();
   description={post.data.description}
   image={post.data.image}
 >
-  <main class="mx-auto my-12 flex max-w-xl flex-col justify-center p-4">
+  <main>
     <h1 class="mb-5 text-xl font-medium">{post.data.title}</h1>
     <p class="mb-1 font-medium text-neutral-500">
       {formatDate(post.data.date)}
