--- a/src/pages/posts/index.astro
+++ b/src/pages/posts/index.astro
@@ -11,7 +11,7 @@ const posts = collection.sort(
 ---
 
 <Layout title={SITE_TITLE} description={SITE_DESCRIPTION}>
-  <main class="mx-auto my-12 flex max-w-lg flex-col justify-center p-4">
+  <main>
     <ul class="flex flex-col gap-1.5">
       {
         posts.map((post) => (
