--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -69,10 +69,43 @@ const {
 
     <ViewTransitions />
   </head>
-  <body class="font-sans text-neutral-900 antialiased">
+  <body
+    class="font-sans text-neutral-900 antialiased transition-colors dark:bg-neutral-900 dark:text-neutral-200"
+  >
     <div class={cn("max-w-xl mx-auto p-4", className)}>
       <Header />
       <slot />
     </div>
   </body>
 </html>
+
+<script is:inline>
+  const setTheme = () => {
+    let theme;
+
+    if (typeof localStorage !== "undefined" && localStorage.getItem("theme")) {
+      theme = localStorage.getItem("theme");
+    } else {
+      theme = window.matchMedia("(prefers-color-scheme: dark)").matches
+        ? "dark"
+        : "light";
+    }
+
+    document.documentElement.classList[theme ? "add" : "remove"](theme);
+
+    if (typeof localStorage !== "undefined") {
+      const observer = new MutationObserver(() => {
+        const isDark = document.documentElement.classList.contains("dark");
+        localStorage.setItem("theme", isDark ? "dark" : "light");
+      });
+      observer.observe(document.documentElement, {
+        attributes: true,
+        attributeFilter: ["class"],
+      });
+    }
+  };
+
+  setTheme();
+
+  document.addEventListener("astro:after-swap", setTheme);
+</script>
