refactor: updated colors

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -29,28 +29,28 @@
       @apply my-4 leading-relaxed;
     }
     h1 {
-      @apply my-4 text-xl font-medium dark:font-semibold dark:text-white;
+      @apply my-4 text-xl font-medium dark:text-white;
     }
     h2 {
-      @apply my-4 text-lg font-medium dark:font-semibold dark:text-white;
+      @apply my-4 text-lg font-medium dark:text-white;
     }
     h3,
     h4,
     h5,
     h6 {
-      @apply my-4 font-medium dark:font-semibold dark:text-white;
+      @apply my-4 font-medium dark:text-white;
     }
     :not(pre) > code {
-      @apply rounded border bg-neutral-200/50 px-1 py-0.5 font-mono text-sm font-medium text-black dark:border-neutral-700 dark:bg-neutral-800/50 dark:text-white;
+      @apply rounded border bg-zinc-200/50 px-1 py-0.5 font-mono text-sm font-medium text-black dark:border-zinc-700 dark:bg-zinc-800/50 dark:text-white;
     }
     pre:has(code) {
-      @apply my-4 max-h-[600px] overflow-auto rounded-lg border p-4 font-mono text-sm font-medium dark:border-neutral-700;
+      @apply my-4 max-h-[600px] overflow-auto rounded-lg border p-4 font-mono text-sm font-medium dark:border-zinc-700;
     }
     img {
-      @apply my-4 rounded-lg border dark:border-neutral-700;
+      @apply my-4 rounded-lg border dark:border-zinc-700;
     }
     video {
-      @apply my-4 rounded-lg border dark:border-neutral-700;
+      @apply my-4 rounded-lg border dark:border-zinc-700;
     }
     blockquote {
       @apply my-4 border-l-2 pl-4;
@@ -61,10 +61,10 @@
     table {
       @apply my-4 w-full table-auto border-collapse text-sm;
       th {
-        @apply border-b p-4 text-left font-medium dark:border-neutral-700;
+        @apply border-b p-4 text-left font-medium dark:border-zinc-700;
       }
       td {
-        @apply border-b bg-neutral-50 p-4 dark:border-neutral-700 dark:bg-neutral-800;
+        @apply border-b bg-zinc-50 p-4 dark:border-zinc-700 dark:bg-zinc-800;
       }
     }
     ol {
@@ -74,7 +74,7 @@
       @apply my-1 list-inside list-disc space-y-1 [&_ol]:pl-5 [&_ul]:pl-5;
     }
     kbd {
-      @apply rounded border border-b-2 bg-neutral-100 px-1 py-0.5 font-mono text-xs font-medium text-black dark:border-neutral-700 dark:bg-neutral-800 dark:text-white;
+      @apply rounded border border-b-2 bg-zinc-100 px-1 py-0.5 font-mono text-xs font-medium text-black dark:border-zinc-700 dark:bg-zinc-800 dark:text-white;
     }
     mark {
       @apply dark:bg-yellow-500/50 dark:text-white;
