--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,6 +14,6 @@ import ThemeToggle from "./ThemeToggle.astro";
 
 <style>
   a {
-    @apply font-medium text-neutral-500 hover:text-neutral-900 hover:underline dark:hover:text-neutral-100;
+    @apply font-medium text-zinc-500 hover:text-zinc-900 hover:underline dark:hover:text-zinc-100;
   }
 </style>
