--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -70,7 +70,7 @@ const {
     <ViewTransitions />
   </head>
   <body
-    class="font-sans text-neutral-900 antialiased transition-colors dark:bg-neutral-900 dark:text-neutral-200"
+    class="font-sans text-zinc-900 antialiased transition-colors dark:bg-zinc-900 dark:text-zinc-200"
   >
     <div class={cn("max-w-xl mx-auto p-4", className)}>
       <Header />
