--- a/src/pages/posts/[...slug].astro
+++ b/src/pages/posts/[...slug].astro
@@ -22,8 +22,10 @@ const { Content } = await post.render();
   image={post.data.image}
 >
   <main>
-    <h1 class="mb-5 text-xl font-medium">{post.data.title}</h1>
-    <p class="mb-1 font-medium text-neutral-500">
+    <h1 class="mb-5 text-xl font-medium">
+      {post.data.title}
+    </h1>
+    <p class="mb-1 font-medium text-zinc-500">
       {formatDate(post.data.date)}
     </p>
     <article>
