--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site);
 const {
   title,
   description,
-  image = "/blog-placeholder.svg",
+  image = "/static/blog-placeholder.png",
   className,
 } = Astro.props;
 ---
