remove view transitions

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -104,7 +104,7 @@ const {
     <meta property="twitter:description" content={description} />
     <meta property="twitter:image" content={new URL(image, Astro.url)} />
 
-    <ViewTransitions />
+    <!-- <ViewTransitions /> -->
   </head>
   <body
     class="font-sans text-zinc-900 antialiased transition-colors dark:bg-neutral-950 dark:text-neutral-400"
