--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -101,6 +101,16 @@ import Layout from "../layouts/Layout.astro";
           </th>
           <th></th>
         </tr>
+        <tr>
+          <th>CVE-2025-47777</th>
+          <th><a href="https://github.com/nanbingxyz/5ire">5ire</a></th>
+          <th>
+            <a href="https://github.com/nanbingxyz/5ire/security/advisories/GHSA-mr8w-mmvv-6hq8"
+              >GHSA-mr8w-mmvv-6hq8
+            </a>
+          </th>
+          <th></th>
+        </tr>
       </table>
     </section>
     <section id="results">
