rm invalid email

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import Layout from "../layouts/Layout.astro";
       <a href="https://x.com/ensyzip">Twitter</a>
       <a href="https://github.com/nsysean">Github</a>
       <a href="https://discord.com/users/603448257653374976">Discord</a>
-      <a href="mailto:ensy.zip@gmail.com">Email</a>
+      <!-- <a href="mailto:ensy.zip@gmail.com">Email</a> -->
     </div>
     <section id="about">
       <h2>About</h2>
