--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,6 +32,9 @@ import Layout from "../layouts/Layout.astro";
           >competitive programmer</u
         >.<br />
       </p>
+      <p>
+        Part-time <u>bug bounty hunter</u>: Discovered vulnerabilities in bug bounty programmes such as <u>Google, Adobe, and Fastmail</u>.
+      </p>
     </section>
     <section id="research">
       <h2>CVE</h2>
@@ -105,7 +108,8 @@ import Layout from "../layouts/Layout.astro";
           <th>CVE-2025-47777</th>
           <th><a href="https://github.com/nanbingxyz/5ire">5ire</a></th>
           <th>
-            <a href="https://github.com/nanbingxyz/5ire/security/advisories/GHSA-mr8w-mmvv-6hq8"
+            <a
+              href="https://github.com/nanbingxyz/5ire/security/advisories/GHSA-mr8w-mmvv-6hq8"
               >GHSA-mr8w-mmvv-6hq8
             </a>
           </th>
@@ -116,13 +120,13 @@ import Layout from "../layouts/Layout.astro";
     <section id="results">
       <h2>Results</h2>
       <ul>
-        <li>First place - NuttyShell CTF 2025 Secondary Division</li>
-        <li>
-          Finalist - First International Cybersecurity Olympiad
-          <em>(Result TBD)</em>
+        <li>MVP, Champion, Best Attack, Defense Team Award - HKIRC CTF Secondary
+          Division
         </li>
-        <li>
-          Finals & 1st place in heats - HKCERT CTF 2024 Secondary Division
+        <li>First place - NuttyShell CTF 2025 Secondary Division</li>
+        <li>Silver Medalist - First International Cybersecurity Olympiad
+        </li>
+        <li>Finals & 1st place in heats - HKCERT CTF 2024 Secondary Division
         </li>
         <li>Silver - Hong Kong Olympiad in Informatics Junior 2024</li>
         <li>8th Individual - AlpacaHack Round 2 <em>(Web)</em></li>
